# ethereum-bridge-rpc-test

./: .gitignore  Cargo.toml  README.md
res/: Bridge.abi  Governance.abi  Sign.abi
scripts/: run
src/: contracts.rs  main.rs  namada_queries.rs  types.rs
