[package]
name = "ethereum-bridge-rpc-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "1.0.2"
eyre = "0.6.8"
hex = "0.4.3"
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.91"
tokio = { version = "1.23.1", features = ["full"] }
