[package]
name = "ethereum-bridge-rpc-test"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "1.0.2"
eyre = "0.6.8"
hex = "0.4.3"
serde_json = "1.0.91"
tokio = { version = "1.23.1", features = ["full"] }
ethbridge-structs = { git = "https://github.com/heliaxdev/ethbridge-rs", tag = "v0.1.0" }
ethbridge-governance-contract = { git = "https://github.com/heliaxdev/ethbridge-rs", tag = "v0.1.0" }
